
-------------------------------------------------------------------
0.0.4:
-SEO optimized pretty URLs
-Smart Contract Data
-Bug fixes / UI tweaks
-------------------------------------------------------------------

-------------------------------------------------------------------
0.0.5:
-Cleaned up UI
-Switched to header navigation
-Prepped template system for dynamic content
-------------------------------------------------------------------

-------------------------------------------------------------------
0.0.6:
-MySQL database
-Cron jobs
-Charts
-User account login
-Captcha protection
-------------------------------------------------------------------

-------------------------------------------------------------------
0.0.7:
-Improved chart UI
-------------------------------------------------------------------

-------------------------------------------------------------------
0.0.8:
-Tweaks
-Caching all (API) block data to db
-UI / UX improvement
-------------------------------------------------------------------

-------------------------------------------------------------------
0.0.9:
-Global user input sanitization
-Pagination for multiple results pages
-'View All' DS / TX blocks pages
-------------------------------------------------------------------

-------------------------------------------------------------------
0.1.0:
-Additional config file options
-Fixed pagination bug
-Added API error alerts
-------------------------------------------------------------------

-------------------------------------------------------------------
0.1.1:
-PHP version compatibility
-PHP extension missing alerts
-Leveldb extension support
-------------------------------------------------------------------

-------------------------------------------------------------------
0.1.2:
-Cached chart data (re-cache after 5 minutes)
-------------------------------------------------------------------








